devel
-----

* Use intermediate commits in old shard synchronization protocol. This avoids
  overly large RocksDB transactions when syncing large shards, which is a
  remedy for OOM kills during restarts.

* Remove async mode from pregel

* Added a configuration option (for the agency):
    --agency.supervision-failed-leader-adds-follower
  with a default of `true` (behavior as before). If set to `false`,
  a `FailedLeader` job does not automatically configure a new shard
  follower, thereby preventing unnecessary network traffic, CPU and IO load
  for the case that the server comes back quickly. If the server is
  permanently failed, an `AddFollower` job will be created anyway eventually.

* Print the pid of the process which sent a SIGABRT or other fatal 
  signal that shuts down ArangoDB ungracefully.

* Avoid write-write conflicts for single document operations performed via the
  document REST API (i.e., no AQL, but also no streaming transactions). This is
  achieved by locking the key of each document before performing the actual
  modification. This lock acquisition effectively serializes all operations on
  the same document. To avoid starvation, the lock acquisition is limited to
  one second. This lock timeout value is currently hardcoded but will be made
  configurable in the future. If the lock cannot be acquired within this time,
  the operation fails with a write-write conflict error as before.

  Performing changes to a unique index entry also requires us to lock that
  index entry to ensure uniqueness. This lock acquisition is subject to the
  same lock timeout as locking the document key.

  We are planning to generalize this for multi-document operations as well as
  AQL and streaming transactions in the future.

  In case we cannot acquire the lock on the key of the document we want to
  insert/modify, the error message will be
  `Timeout waiting to lock key - in index primary of type primary over '_key'; conflicting key: <key>`