@@ -16,6 +16,9 @@ allow-admin-execute = true
 startup-directory = @TOP_DIR@/js
 module-directory = @TOP_DIR@/enterprise/js
 
+[rocksdb]
+block-cache-jemalloc-allocator = true
+
 [server]
 allow-use-database = true
 authentication = false
